[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Entities/Items/FuelCan/FuelCan.gd" type="Script" id=1]
[ext_resource path="res://assets/spritesheet_n.png" type="Texture" id=3]
[ext_resource path="res://assets/res/items/fuelcan.tres" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 392, 1280, 8, 8 )

[sub_resource type="CircleShape2D" id=3]
resource_local_to_scene = true
radius = 5.09902

[node name="FuelCan" type="RigidBody2D"]
collision_layer = 8
collision_mask = 47
mode = 2
gravity_scale = 0.0
linear_damp = 10.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
normal_map = SubResource( 2 )
region_rect = Rect2( 0, 0, 8, 8 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 46

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
